[tool.poetry]
name = "ncn-milepost-openstreetmap-map"
version = "0.1.0"
description = "Generates a map of National Cycle Network mileposts"
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Shapely = "^2.0.1"
pyshp = "^2.1.3"
pyproj = "^3.1.0"
pangocffi = "^0.13.0"
map-engraver = {git = "https://github.com/leifgehrmann/map-engraver.git"}

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
