[tool.poetry]
name = "ncn-milepost-openstreetmap-map"
version = "0.1.0"
description = "Generates a map of National Cycle Network mileposts"
authors = ["Leif Gehrmann <leif.gehrmann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
Shapely = "^2.1.2"
pyshp = "^3.0.3"
pyproj = "^3.7.2"
pangocffi = "^0.14.0"
map-engraver = {git = "https://github.com/leifgehrmann/map-engraver.git"}

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
